cluster/manifests/prometheus/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prometheus
  labels:
    name: prometheus
    pod-security.kubernetes.io/enforce: restricted
