cluster/manifests/prometheus/overlays/dev/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: prometheus
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - prometheus.minikube.127.0.0.1.nip.io
      port:
        number: 80
        name: http
        protocol: HTTP
