cluster/manifests/prometheus/overlays/dev/virtual_service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: prometheus
spec:
  gateways:
    - prometheus
  hosts:
    - prometheus.minikube.127.0.0.1.nip.io
    - prometheus.kaidotio.dev
  http:
    - route:
        - destination:
            host: prometheus
            port:
              number: 9090
      retries:
        attempts: 3
        retryOn: gateway-error,retriable-4xx,connect-failure,refused-stream,unavailable,cancelled,retriable-status-codes
